--- a/views/user_form.pug
+++ b/views/user_form.pug
@@ -11,6 +11,8 @@ block content
       input#surname.form-control(type='text', placeholder='min. 2 litery' name='surname' required value=(undefined===user ? '' : user.surname))
       label(for='username') Username:
       input#username.form-control(type='text', placeholder='min. 3 litery' name='username' required value=(undefined===user ? '' : user.username))
+      label(for='password') Password:
+      input#password.form-control(type='password', minlength="8" placeholder='min. 8 litery' name='password' autocmplete='off' required value='' )
     button.btn.btn-primary(type='submit') Submit
 
   if messages
