--- a/views/layout.pug
+++ b/views/layout.pug
@@ -39,6 +39,8 @@ html(lang='pl-PL')
               li
                 a(href='/galleries/gallery_add') Add gallery
               li
+                a(href="/images/image_add") Add image
+              li
                 hr
                 if loggedUser
                   a(href='/users/user_login') Login (logged as #{loggedUser})
