--- a/views/layout.pug
+++ b/views/layout.pug
@@ -33,6 +33,8 @@ html(lang='pl-PL')
                 a(href='/galleries') Galleries
               li
                 a(href='/images') Images
+              li 
+                a(href="/galleries/gallery_browse") Gallery Browse
               li
                 hr
                 a(href='/users/user_add') Add user
