--- a/views/layout.pug
+++ b/views/layout.pug
@@ -43,6 +43,8 @@ html(lang='pl-PL')
               li
                 a(href="/images/image_add") Add image
               li
+                a(href="/images/image_upload") Upload image
+              li
                 hr
                 if loggedUser
                   a(href='/users/user_login') Login (logged as #{loggedUser})
