--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,55 +2,61 @@ doctype html
 html(lang='pl-PL')
   head
     title= title
-    
+
     meta(charset='utf-8')
-    meta(name='viewport', content='width=device-width, initial-scale=1')
-    
+    meta(name='viewport' content='width=device-width, initial-scale=1')
+
     //- biblioteka klas CSS (layout)
-    link(rel="stylesheet", href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css", integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N", crossorigin="anonymous")
+    link(rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous")
+
+    //- blioteka m.in do manipulacji elementami DOM, Ajax, etc.
+    script(src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous")
     
     //- biblioteka min. JS (modals, tooltips, etc)
-    //- script(src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js", integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+", crossorigin="anonymous")
-   
-    //- blioteka m.in do manipulacji elementami DOM, Ajax, etc.
-    //- script(src="https://code.jquery.com/jquery-3.5.1.slim.min.js", integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj", crossorigin="anonymous")
-    
-    link(rel='stylesheet', href='/stylesheets/style.css')
-  
+    script(src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js" integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous")
+
+
+    link(rel='stylesheet' href='/stylesheets/style.css')
+
   body
-    div(class='container-fluid')
+    div(class='p-3 bg-primary text-white text-center')
+      h1 Gallery App
+    nav(class='navbar navbar-expand-sm bg-dark mavbar-dark')
+      div(class='container-fluid')
+        ul(class='navbar-nav mr-auto')
+          li(class='nav-item')
+            a(class='nav-link active' href='/') Home
+          li(class-'nav-item')
+            if loggedUser
+              a(class='nav-link' href='') logged as #{loggedUser}
+            else
+              a(class='nav-link active' href='/users/user_login') Login (not logged)
+    div(class='container-fluid')    
       div(class='row')
         div(class='col-sm-2')
-          block sidebar
-            ul(class='sidebar-nav')
-              li
-                a(href='/') Home
-              li
-                a(href='/stats') Stats  
-              li
-                a(href='/users') Users
-              li
-                a(href='/galleries') Galleries
-              li
-                a(href='/images') Images
-              li 
-                a(href="/galleries/gallery_browse") Gallery Browse
-              li
-                hr
-                a(href='/users/user_add') Add user
-              li
-                a(href='/galleries/gallery_add') Add gallery
-              li
-                a(href="/images/image_add") Add image
-              li
-                a(href="/images/image_upload") Upload image
-              li
-                hr
-                if loggedUser
-                  a(href='/users/user_login') Login (logged as #{loggedUser})
-                else
-                  a(href='/users/user_login') Login (not logged)
-              li
-                a(href='/users/user_logout') Logout
-        div(class='col-sm-10')
+          //- block sidebar
+          ul(class='nav flex-column')
+            li(class='nav-item')
+              a(class='nav-link active' href='/stats') Stats  
+            li(class='nav-item')
+              a(class='nav-link active' href='/users') Users
+            li(class='nav-item')
+              a(class='nav-link active' href='/galleries') Galleries
+            li(class='nav-item')
+              a(class='nav-link active' href='/images') Images
+            li(class='nav-item')
+              a(class='nav-link active' href="/galleries/gallery_browse") Gallery Browse
+            li(class='nav-item')
+              a(class='nav-link active' href='/users/user_add') Add user
+            li(class='nav-item')
+              a(class='nav-link active' href='/galleries/gallery_add') Add gallery
+            li(class='nav-item')
+              a(class='nav-link active' href="/images/image_add") Add image
+            li(class='nav-item')
+              a(class='nav-link active' href="/images/image_upload") Upload image
+            li(class='nav-item')
+              a(class='nav-link active' href='/users/user_logout') Logout
+        div(class='col-sm-10 mt-3')
           block content
+    div(class='mt-3 p-3 bg-dark text-white text-center')
+      p Footer 
