--- a/views/gallery_list.pug
+++ b/views/gallery_list.pug
@@ -1,15 +1,25 @@
 extends layout
 
 block content
-  h1= title
+  .container.mt-4
+    h1.mb-4= title
 
-  if gallery_list.length
-    each gallery in gallery_list
-      ul
-        li
-          | #{gallery.name}; #{gallery.description}; #{gallery.date.toDateString()}; #{gallery.user.surname}
-          if currentUser && (currentUser.username === 'admin' || gallery.user._id.toString() === currentUser._id.toString())
-            form(action=`/galleries/gallery_delete/${gallery._id}`, method='POST', style='display:inline', onsubmit="return confirm('Delete this gallery and all its images?')")
-              button.btn.btn-danger.btn-sm(type='submit') Delete
-  else
-    p There are no any galleries.
+    if gallery_list.length
+      .card
+        .card-header.bg-primary.text-white
+          | Galleries
+        ul.list-group.list-group-flush
+          each gallery in gallery_list
+            li.list-group-item
+              .d-flex.justify-content-between.align-items-center
+                .w-75
+                  h5.mb-1= gallery.name
+                  p.mb-1.text-muted= gallery.description
+                  small.text-secondary
+                    | Created: #{gallery.date.toDateString()} by #{gallery.user.surname}
+                if currentUser && (currentUser.username === 'admin' || gallery.user._id.toString() === currentUser._id.toString())
+                  form(action=`/galleries/gallery_delete/${gallery._id}`, method='POST', onsubmit="return confirm('Delete this gallery and all its images?')")
+                    button.btn.btn-danger.btn-sm(type='submit') Delete
+    else
+      .alert.alert-warning.text-center
+        | There are no galleries yet.
