--- a/views/image_list.pug
+++ b/views/image_list.pug
@@ -1,10 +1,23 @@
 extends layout
 
 block content
-  h1= title
-  if image_list.length
-    each image in image_list
-      ul
-        li #{image.name}; #{image.description}; #{image.path}; #{image.gallery.name}
-  else
-    p There are no any images.
+  .container.mt-4
+    h1.mb-4= title
+
+    if image_list.length
+      .card
+        .card-header.bg-primary.text-white
+          | Images
+        ul.list-group.list-group-flush
+          each image in image_list
+            li.list-group-item
+              .d-flex.justify-content-between.align-items-center
+                .w-75
+                  h5.mb-1= image.name
+                  p.mb-1.text-muted= image.description
+                  small.text-secondary
+                    | File: #{image.path} | Gallery: #{image.gallery.name}
+                //- Można dodać np. przycisk podglądu/usuwania tu
+    else
+      .alert.alert-warning.text-center
+        | There are no images yet.
