--- a/views/index.pug
+++ b/views/index.pug
@@ -1,5 +1,9 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+  .container.mt-5
+    .jumbotron.text-center
+      h1.display-4= title
+      p.lead Welcome to #{title}!
+      hr
+      p Explore galleries.
