--- a/views/layout.pug
+++ b/views/layout.pug
@@ -52,11 +52,11 @@ html(lang='pl-PL')
               a(class='nav-link active' href='/galleries/gallery_add') Add gallery
             li(class='nav-item')
               a(class='nav-link active' href="/images/image_add") Add image
-            li(class='nav-item')
-              a(class='nav-link active' href="/images/image_upload") Upload image
+            //- li(class='nav-item')
+            //-   a(class='nav-link active' href="/images/image_upload") Upload image
             li(class='nav-item')
               a(class='nav-link active' href='/users/user_logout') Logout
         div(class='col-sm-10 mt-3')
           block content
     div(class='mt-3 p-3 bg-dark text-white text-center')
-      p Footer 
+      p Gallery - Mikołaj Korólczyk 2025
