--- a/views/image_form.pug
+++ b/views/image_form.pug
@@ -1,31 +1,52 @@
 extends layout
 
 block content
-  h1= title
+  .container.mt-4
+    .row.justify-content-center
+      .col-md-8
+        .card
+          .card-header.bg-primary.text-white
+            h4.mb-0= title
 
-  form(method='POST', enctype='multipart/form-data')
-    div.form-group
-      label(for='i_name') Image Name:
-      input#i_name.form-control(type='text', placeholder='min. 2 litery', name='i_name', required, value=(image ? image.name : ''))
+          .card-body
+            form(method='POST', enctype='multipart/form-data')
+              .form-group
+                label(for='i_name') Image Name:
+                input#i_name.form-control(
+                  type='text', 
+                  name='i_name', 
+                  required,
+                  placeholder='min. 2 characters',
+                  value=(image ? image.name : '')
+                )
 
-      label(for='i_description') Description:
-      input#i_description.form-control(type='text', placeholder='min. 2 litery', name='i_description', required, value=(image ? image.description : ''))
+              .form-group
+                label(for='i_description') Description:
+                input#i_description.form-control(
+                  type='text', 
+                  name='i_description',
+                  placeholder='optional',
+                  value=(image ? image.description : '')
+                )
 
-      label(for='i_path') Select file:
-      input#i_path.form-control(type='file', name='i_path', required)
+              .form-group
+                label(for='i_path') Select file:
+                input#i_path.form-control-file(type='file', name='i_path', required)
 
-      label(for='i_gallery') Select gallery:
-      select#i_gallery.form-control(name='i_gallery', required)
-        option(value='') --Select a gallery--
-        for gallery in galleries
-          //- if image && image.gallery && gallery._id.toString() === image.gallery._id.toString()
-          //-   option(value=gallery._id selected)= gallery.name
-          //- else
-          option(value=gallery._id)= gallery.name
+              .form-group
+                label(for='i_gallery') Select gallery:
+                select#i_gallery.form-control(name='i_gallery', required)
+                  option(value='') --Select a gallery--
+                  for gallery in galleries
+                    if image && image.gallery && gallery._id.toString() === image.gallery.toString()
+                      option(value=gallery._id selected)= gallery.name
+                    else
+                      option(value=gallery._id)= gallery.name
 
-    button.btn.btn-primary(type='submit') Submit
+              button.btn.btn-success.btn-block(type='submit') Submit
 
-  if messages
-    ul
-      each message in messages
-        li!= message
+            if messages
+              .mt-3
+                ul.list-unstyled
+                  each message in messages
+                    li.text-danger= message
