--- a/views/gallery_list.pug
+++ b/views/gallery_list.pug
@@ -18,8 +18,10 @@ block content
                   small.text-secondary
                     | Created: #{gallery.date.toDateString()} by #{gallery.user.surname}
                 if currentUser && (currentUser.username === 'admin' || gallery.user._id.toString() === currentUser._id.toString())
-                  form(action=`/galleries/gallery_delete/${gallery._id}`, method='POST', onsubmit="return confirm('Delete this gallery and all its images?')")
-                    button.btn.btn-danger.btn-sm(type='submit') Delete
+                  .btn-group
+                    a.btn.btn-sm.btn-warning(href=`/galleries/gallery_update?gallery_id=${gallery._id}`) Edit
+                    form(action=`/galleries/gallery_delete/${gallery._id}`, method='POST', onsubmit="return confirm('Delete this gallery and all its images?')", style='display:inline')
+                      button.btn.btn-danger.btn-sm(type='submit') Delete
     else
       .alert.alert-warning.text-center
         | There are no galleries yet.
