uzupełnienie dokumuntacji, link do dokumentacji w layout

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -52,8 +52,8 @@ html(lang='pl-PL')
               a(class='nav-link active' href='/galleries/gallery_add') Add gallery
             li(class='nav-item')
               a(class='nav-link active' href="/images/image_add") Add image
-            //- li(class='nav-item')
-            //-   a(class='nav-link active' href="/images/image_upload") Upload image
+            li(class='nav-item')
+              a(class='nav-link active' href="/api-docs") OpenAPI docs
             li(class='nav-item')
               a(class='nav-link active' href='/users/user_logout') Logout
         div(class='col-sm-10 mt-3')
